Added the PEAR Services_Amazon_S3 package to the vendors.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,3 +39,8 @@ doctrine:
             default:
                 mappings:
                     AcmeDemoBundle: ~
+
+parameters:
+    s3:
+        access_key_id: XXX
+        secret_access_key: YYY
